syntax = "proto3";

service PetGrpc{
  rpc AddPetToUser (UploadUserPetRequest) returns (UploadUserPetResponse);
  rpc DeletePetFromUser (DeleteUserPetRequest) returns (DeleteUserPetResponse);
}

message UploadUserPetRequest{
  string userId = 1;
  string petId = 2;
}

message DeleteUserPetRequest{
  string userId = 1;
  string petId = 2;
}

message UploadUserPetResponse{}

message DeleteUserPetResponse{}